--- a/Views/Shared/_Inpage.cshtml
+++ b/Views/Shared/_Inpage.cshtml
@@ -12,7 +12,7 @@
             {
                 <li class="page-item">
                     <a class="page-link" asp-controller="Aziendas" asp-action="Index"
-               asp-route-pg="1">Prima Pg </a>
+               asp-route-pg="1">Prima</a>
                 </li>
                 <li class="page-item">
                     <a class="page-link" asp-controller="Aziendas" asp-action="Index"
@@ -36,7 +36,7 @@
             {
                 <li class="page-item">
                     <a class="page-link" asp-controller="Aziendas"
-               asp-action="Index" asp-route-pg="@Model.EndPage">Ultima Pg </a>
+               asp-action="Index" asp-route-pg="@Model.EndPage">Ultima</a>
                 </li>
                 <li class="page-item">
                     <a class="page-link" asp-controller="Aziendas"
