--- a/Views/Interventoes/Create.cshtml
+++ b/Views/Interventoes/Create.cshtml
@@ -13,12 +13,12 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="TipoIntervento" class="control-label"></label>
+                <label asp-for="TipoIntervento" class="control-label">Tipo Intervento</label>
                 <input asp-for="TipoIntervento" class="form-control" />
                 <span asp-validation-for="TipoIntervento" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DataIntervento" class="control-label"></label>
+                <label asp-for="DataIntervento" class="control-label">Data Apertura</label>
                 <input asp-for="DataIntervento" class="form-control" />
                 <span asp-validation-for="DataIntervento" class="text-danger"></span>
             </div>
@@ -35,7 +35,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Vai storico interventi</a>
 </div>
 
 @section Scripts {
