--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-1">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MyWebSite</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -25,7 +25,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Aziendas" asp-action="Index">Anagrafe Aziende</a>
                         </li>
-                         <li class="nav-item">
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Interventoes" asp-action="Index">Gestione Interventi</a>
                         </li>
                         <li class="nav-item">
@@ -36,12 +36,39 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+     <main role="main" >
+    <div class="container-fluid">
+        <div class="row">
 
+            <div class="col-2 menu  border border-4 border-start-0 my-0 " style="height:80vh">
+                <h3 class="border-bottom py-2 text-center "> Menu </h3>
+                 <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Aziendas" asp-action="Index">Anagrafe Aziende</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Interventoes" asp-action="Index">Gestione Interventi</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                    </ul>
+            </div>
+            <div class="col-10 " style="height:80vh; overflow:auto">
+               
+                    @RenderBody()
+                
+
+            </div>
+
+
+        </div>
+
+    </div>
+    </main>
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2022 - MyWebSite - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
